Update README.md
Updated java command line